[FIXES - #36054809] - Broken style in wizard

--- a/app/assets/stylesheets/layout/wizard.css.less
+++ b/app/assets/stylesheets/layout/wizard.css.less
@@ -10,6 +10,7 @@
     line-height: 1.2em;
     margin-bottom: 15px;
     padding-bottom: 10px;
+    height: 53px;
   }
   .manage {
     div, form {
